[workspace]
members = ["uniffi-bindgen", "uniffi-bindgen-swift", "ferrostar"]
resolver = "2"

[workspace.package]
authors = [
    "Ian Wagner <ian@stadiamaps.com>",
    "Jacob Fielding <jacob@rallista.app>",
    "Luke Seelenbinder <luke@stadiamaps.com>",
]
license = "BSD-3-Clause"
edition = "2024"
repository = "https://github.com/stadiamaps/ferrostar"
rust-version = "1.88.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"

[workspace.dependencies]
uniffi = "0.30.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
