[package]
name = "ferrostar-core"
version = "0.1.0"
authors = ["Ian Wagner <ian@stadiamaps.com>", "Luke Seelenbinder <luke@stadiamaps.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/stadiamaps/ferrostar"
readme = "README.md"
description = "The common core of Ferrostar, a modern mobile navigation SDK."
keywords = ["navigation", "routing", "osrm"]
categories = ["science::geo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.9"
polyline = "0.10.0"
serde = "1.0.162"
serde_json = "1.0.96"
thiserror = "1.0.40"
uniffi = "0.24.1"

[build-dependencies.uniffi]
version = "0.24.1"
features = ["build"]

[dev-dependencies]
assert-json-diff = "2.0.2"

[lib]
crate-type = ["cdylib", "staticlib"]
