lints.workspace = true

[package]
name = "ferrostar"
version = "0.20.0"
readme = "README.md"
description = "The core of modern turn-by-turn navigation."
keywords = ["navigation", "routing", "valhalla", "osrm"]
categories = ["science::geo"]
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []
std = ["alloc", "serde_json/std", "proptest/std"]
default = ["std", "uniffi"]
wasm_js = [
    "std",
    "getrandom/js",
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "web-time",
]

[dependencies]
geo = "0.28.0"
polyline = "0.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
thiserror = "1.0.64"
uniffi = { workspace = true, optional = true }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
getrandom = { version = "0.2.15", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
web-time = { version = "1.1.0", features = ["serde"], optional = true }
itertools = "0.13.0"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
proptest = { version = "1.5.0", default-features = false }
insta = { version = "1.40.0", features = ["yaml", "redactions"] }
rstest = "0.23.0"
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
