lints.workspace = true

[package]
name = "ferrostar"
version = "0.26.0"
readme = "README.md"
description = "The core of modern turn-by-turn navigation."
keywords = ["navigation", "routing", "valhalla", "osrm"]
categories = ["science::geo"]
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []
std = ["alloc", "serde_json/std", "proptest/std"]
default = ["std", "uniffi"]
wasm_js = [
    "std",
    "getrandom/js",
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "web-time",
]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
geo = "0.29.3"
polyline = "0.11.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", default-features = false }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
thiserror = "2.0.11"
uniffi = { workspace = true, optional = true }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
getrandom = { version = "0.2.15", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
web-time = { version = "1.1.0", features = ["serde"], optional = true }
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
log = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.14.1" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
proptest = { version = "1.6.0", default-features = false }
insta = { version = "1.42.1", features = ["yaml", "redactions"] }
rstest = "0.24.0"
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
