lints.workspace = true

[package]
name = "ferrostar"
version = "0.35.1"
readme = "README.md"
description = "The core of modern turn-by-turn navigation."
keywords = ["navigation", "routing", "valhalla", "osrm"]
categories = ["science::geo"]
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []
std = ["alloc", "serde_json/std", "proptest/std"]
default = ["std", "uniffi"]
wasm_js = [
    "std",
    "getrandom/js",
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "web-time",
    "uuid/js"
]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
geo = "0.30.0"
polyline = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
thiserror = "2.0.12"
uniffi = { workspace = true, optional = true }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
getrandom = { version = "0.2.15", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
web-time = { version = "1.1.0", features = ["serde"], optional = true }
tsify = { version = "0.5.5", default-features = false, features = ["js"] }
log = "0.4.27"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15.0" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
proptest = { version = "1.6.0", default-features = false }
insta = { version = "1.43.1", features = ["yaml", "redactions"] }
rstest = "0.25.0"
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
