[package]
name = "uniffi-bindgen"
version = "0.1.0"
license = "BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uniffi]
version = "0.24.1"
features = ["cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"
