[package]
name = "uniffi-bindgen"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { workspace = true, features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"
