lints.workspace = true

[package]
name = "uniffi-bindgen"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
uniffi = { workspace = true, features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"
